force-app/main/default/objects/Customer_Inquiry__c/Customer_Inquiry__c.object-meta.xml
<CustomObject>
    <label>Customer Inquiry</label>
    <nameField>
        <displayFormat>INQ-{00000}</displayFormat>
        <label>Customer Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>