force-app/main/default/objects/Customer_Inquiry__c/fields/Conversion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Notes__c</fullName>
    <label>Conversion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>