force-app/main/default/objects/Customer_Inquiry__c/fields/Estimated_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Unit_Price__c</fullName>
    <label>Estimated Unit Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>