force-app/main/default/objects/Customer_Inquiry__c/fields/External_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Call_ID__c</fullName>
    <label>External Call ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>