force-app/main/default/objects/Customer_Inquiry__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls task creation</description>
    <label>Follow-Up Required</label>
    <type>Checkbox</type>
</CustomField>