force-app/main/default/objects/Customer_Inquiry__c/fields/Matched_Product__c.field-meta.xml
<CustomField>
    <fullName>Matched_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Product</label>
    <referenceTo>Filter_Product__c</referenceTo>
    <relationshipLabel>Customer Inquiries</relationshipLabel>
    <relationshipName>Customer_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>