force-app/main/default/objects/Customer_Inquiry__c/fields/Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Notes__c</fullName>
    <description>Explains why score/priority was assigned</description>
    <label>Qualification Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>