force-app/main/default/objects/Customer_Inquiry__c/fields/Recommended_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Next_Step__c</fullName>
    <label>Recommended Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Customer</fullName>
            </value>
            <value>
                <fullName>Send Quote</fullName>
            </value>
            <value>
                <fullName>Request More Info</fullName>
            </value>
            <value>
                <fullName>Create Opportunity</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>