force-app/main/default/objects/Customer_Inquiry__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Inquiries</relationshipLabel>
    <relationshipName>Customer_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>