force-app/main/default/objects/Customer_Inquiry__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Inquiries</relationshipLabel>
    <relationshipName>Customer_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>