force-app/main/default/objects/Customer_Inquiry__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer Inquiries</relationshipLabel>
    <relationshipName>Customer_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>