force-app/main/default/objects/Customer_Inquiry__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Inquiries</relationshipLabel>
    <relationshipName>Customer_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>