force-app/main/default/objects/Customer_Inquiry__c/fields/Requested_Depth__c.field-meta.xml
<CustomField>
    <fullName>Requested_Depth__c</fullName>
    <label>Requested Depth</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>