force-app/main/default/objects/Customer_Inquiry__c/fields/Requested_Height__c.field-meta.xml
<CustomField>
    <fullName>Requested_Height__c</fullName>
    <label>Requested Height</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>