force-app/main/default/objects/Customer_Inquiry__c/fields/Requested_MERV_Rating__c.field-meta.xml
<CustomField>
    <fullName>Requested_MERV_Rating__c</fullName>
    <label>Requested MERV Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>