force-app/main/default/objects/Customer_Inquiry__c/fields/Requested_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Requested_Timeline__c</fullName>
    <label>Requested Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>This Week</fullName>
            </value>
            <value>
                <fullName>This Month</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>