force-app/main/default/objects/Customer_Inquiry__c/fields/Requested_Width__c.field-meta.xml
<CustomField>
    <fullName>Requested_Width__c</fullName>
    <label>Requested Width</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>