force-app/main/default/objects/Customer_Inquiry__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Voice AI</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>