force-app/main/default/objects/Customer_Inquiry__c/fields/Target_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Target_Use_Case__c</fullName>
    <label>Target Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>HVAC Contractor</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>