force-app/main/default/objects/Customer_Inquiry__c/validationRules/Quantity_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>