force-app/main/default/objects/Customer_Inquiry__c/validationRules/Require_at_least_one_contact_method.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_at_least_one_contact_method</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Email__c),
    ISBLANK(Phone__c)
)</errorConditionFormula>
    <errorMessage>Please provide either an email address or a phone number.</errorMessage>
</ValidationRule>